--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="retro bowl/">RetroBowl</a></li>
         <li><a href="subwaysurfers/">SubwaySurfers</a></li>
         <li><a href="tinyfishing/">Tinyfishing</a></li>
+        <li><a href="age-of-war/">age-of-war</a></li>
         
     </ul>
 </body>
